--- a/about.html
+++ b/about.html
@@ -52,10 +52,14 @@
 					<li><a href="./about.html" class="menu--active">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red Roses</a></li>
-							<li><a href="./gallery2.html">Yellow Roses</a></li>
-							<li><a href="./gallery3.html">Other Colors</a></li>
-							<li><a href="./gallery4.html">Tinted</a></li>
+							<li><a href="./gallery1.html">Red & Coral</a></li>
+							<li><a href="./gallery2.html">White Roses</a></li>
+							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html">Green</a></li>
+							<li><a href="./gallery6.html">Lavender</a></li>
+							<li><a href="./gallery7.html">Bicolor</a></li>
+							<li><a href="./gallery8.html">Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
