--- a/blog-single.html
+++ b/blog-single.html
@@ -53,10 +53,14 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red Roses</a></li>
-							<li><a href="./gallery2.html">Yellow Roses</a></li>
-							<li><a href="./gallery3.html">Other Colors</a></li>
-							<li><a href="./gallery4.html">Tinted</a></li>
+							<li><a href="./gallery1.html">Red & Coral</a></li>
+							<li><a href="./gallery2.html">White Roses</a></li>
+							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html">Green</a></li>
+							<li><a href="./gallery6.html">Lavender</a></li>
+							<li><a href="./gallery7.html">Bicolor</a></li>
+							<li><a href="./gallery8.html">Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html" class="menu--active">Sustainability</a></li>
@@ -88,11 +92,6 @@
 				<div class="blog__header">
 					<div class="blog__cata">Eco friendly</div>
 					<h2 class="blog__single__title">Eco & Social commitment</h2>
-					<div class="blog__metas">
-						<div class="blog__meta">Bellaflowers </div>
-						<div class="blog__meta">December 27, 2019</div>
-						<div class="blog__meta">No Comments</div>
-					</div>
 				</div>
 				<blockquote>
 					<P>THIS IS OUR VERY INSPIRING QUOTE</P>
