--- a/gallery1.html
+++ b/gallery1.html
@@ -47,14 +47,21 @@
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
-					<a href="./index.html" class="site-logo width-restrict">
+					<a href="./index.html" class="site-logo">
 						<picture>
 							<source media="(min-width:650px)" srcset="img/logo2.png">
 							<source media="(min-width:465px)" srcset="img/logo2.png">
-							<img src="img/logo2.png" alt="BellaLogo" style="height: 100px">
+							<img src="img/logo3.png" alt="BellaLogo" style="height: 100px">
 						  </picture>
 					</a>
 				</div>
+
+				<div class="col-sm-4 col-md-3 order-3 order-sm-3">
+					<div class="header__switches">
+						<a href="#" class="nav-switch"><i class="fa fa-bars"></i></a>
+					</div>
+				</div>
+
 			</div>
 			<nav class="main__menu">
 				<ul class="nav__menu mb-3">
@@ -62,10 +69,14 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html" class="menu--active">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red Roses</a></li>
-							<li><a href="./gallery2.html">Yellow Roses</a></li>
-							<li><a href="./gallery3.html">Other Colors</a></li>
-							<li><a href="./gallery4.html">Tinted</a></li>
+							<li><a href="./gallery1.html">Red & Coral</a></li>
+							<li><a href="./gallery2.html">White Roses</a></li>
+							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html">Green</a></li>
+							<li><a href="./gallery6.html">Lavender</a></li>
+							<li><a href="./gallery7.html">Bicolor</a></li>
+							<li><a href="./gallery8.html">Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
@@ -80,7 +91,7 @@
 
 		  
 		  <!-- Section heading -->
-		  <h3 class="font-weight-bold mb-0 pb-2 text-center">Red & Pink</h3> 
+		  <h3 class="font-weight-bold mt-5 pb-2 text-center">Red & Coral</h3> 
 
 	<!-- About Page -->
 
@@ -90,74 +101,22 @@
 		<div class="gallery__warp">
 			<div class="row">
 			  
-				<div class="col-lg-3 col-md-4 col-sm-6">
+				<div class="col-lg-6 col-md-4 col-sm-6">
 					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/red/1.png" data-fresco-group="gallery">
-						<img src="img/gallery/red/1.png" alt="flower1">
+						<img src="img/gallery/red/freedom.png" alt="freedom">
 						<div class="blog__content text-white mb-5">
 							<h3> • Freedom</h3>
 						</div>
 					</a>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/2.png" data-fresco-group="gallery">
-						<img src="img/gallery/red/2.png" alt="flower2">
+				<div class="col-lg-6 col-md-4 col-sm-6">
+					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/coral.png" data-fresco-group="gallery">
+						<img src="img/gallery/red/coral.png" alt="coral reef">
 						<div class="blog__content text-white mb-5">
-							<h3> • High & Twinkle </h3>
+							<h3> • Coral Reef </h3>
 						</div>
 					</a>
 				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/3.png" data-fresco-group="gallery">
-						<img src="img/gallery/red/3.png" alt="flower3">
-						<div class="blog__content text-white mb-5">
-							<h3> • Orange Crush</h3>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/4.png" data-fresco-group="gallery">
-						<img src="img/gallery/red/4.png" alt="flower4">
-						<div class="blog__content text-white mb-5">
-							<h3> • Blush</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/5.png" data-fresco-group="gallery">
-						<img src="img/gallery/red/5.png" alt="flower4">
-						<div class="blog__content text-white mb-5">
-							<h3> • Hot Paris </h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/6.png" data-fresco-group="gallery">
-						<img src="img/gallery/red/6.png" alt="flower4">
-						<div class="blog__content text-white mb-5">
-							<h3> • Dekora</h3>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/7.png" data-fresco-group="gallery">
-						<img src="img/gallery/red/7.png" alt="flower4">
-						<div class="blog__content text-white mb-5">
-							<h3> • Queen Berry</h3>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-3 col-md-4 col-sm-6">
-					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/8.png" data-fresco-group="gallery">
-						<img src="img/gallery/red/8.png" alt="flower4">
-						<div class="blog__content text-white mb-5">
-							<h3> ••• </h3>
-						</div>
-					</a>
-				</div>
-
 
 			</div>
 		</div>
