--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,6 @@
 						<img src="img/logo2.png" alt="Logo Bella Flowers">
 					</a>
 				</div>
-				<div class="col-sm-4 col-md-3 order-3 order-sm-3">
-					<div class="header__switches">
-						<a href="#" class="search-switch"><i class="fa fa-search"></i></a>
-						<a href="#" class="nav-switch"><i class="fa fa-bars"></i></a>
-						<a href="#"><i class="fa fa-shopping-cart"></i></a>
-					</div>
-				</div>
 			</div>
 			<nav class="main__menu">
 				<ul class="nav__menu">
@@ -58,10 +51,14 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red Roses</a></li>
-							<li><a href="./gallery2.html">Yellow Roses</a></li>
-							<li><a href="./gallery3.html">Other Colors</a></li>
-							<li><a href="./gallery4.html">Tinted</a></li>
+							<li><a href="./gallery1.html">Red & Coral</a></li>
+							<li><a href="./gallery2.html">White Roses</a></li>
+							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html">Green</a></li>
+							<li><a href="./gallery6.html">Lavender</a></li>
+							<li><a href="./gallery7.html">Bicolor</a></li>
+							<li><a href="./gallery8.html">Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
@@ -85,7 +82,7 @@
 							<img src="img/logo_bw.png" alt="Logo">
 							<div class="about__meta__info">
 								<h5>Bella Flowers-Colombia</h5>
-								<p>Bogotá-Tocancipá-Palo Verde</p>
+								<p>Tocancipá-Nemocón</p>
 							</div>
 						</div>
 					</div>
