--- a/gallery.html
+++ b/gallery.html
@@ -51,9 +51,15 @@
 						<picture>
 							<source media="(min-width:650px)" srcset="img/logo2.png">
 							<source media="(min-width:465px)" srcset="img/logo2.png">
-							<img src="img/logo2.png" alt="BellaLogo" style="height: 100px">
+							<img src="img/logo3.png" alt="BellaLogo" style="height: 100px">
 						  </picture>
 					</a>
+				</div>
+
+				<div class="col-sm-4 col-md-3 order-3 order-sm-3">
+					<div class="header__switches">
+						<a href="#" class="nav-switch"><i class="fa fa-bars"></i></a>
+					</div>
 				</div>
 			</div>
 			<nav class="main__menu">
@@ -151,7 +157,7 @@
 				  <p class="card-text">Exciting, bold, caring.
 				  </p>
 				  <div class="container justify-content-center text-center">		
-					<a class="btn btn-md ml-0 border_button hover_white" href="gallery.html" role="button">Show more</a>
+					<a class="btn btn-md ml-0 border_button hover_white" href="gallery2.html" role="button">Show more</a>
 				  </div>
 				</div>
 				<!-- Card content -->
@@ -185,7 +191,7 @@
 				  <!-- Description -->
 				  <p class="card-text"> Endless possiblities. </p>
 				  <div class="container justify-content-center text-center">		
-					<a class="btn btn-md ml-0 border_button hover_pink" href="gallery.html" role="button">Show more</a>
+					<a class="btn btn-md ml-0 border_button hover_pink" href="gallery3.html" role="button">Show more</a>
 				  </div>
 				</div>
 				<!-- Card content -->
@@ -219,7 +225,7 @@
 				 <!-- Description -->
 				  <p class="card-text">Rainbow, patriot, fantasy.</p>
 				  <div class="container justify-content-center text-center">		
-					<a class="btn btn-md ml-0 border_button hover_yellow" href="gallery.html" role="button">Show more</a>
+					<a class="btn btn-md ml-0 border_button hover_yellow" href="gallery4.html" role="button">Show more</a>
 				  </div>
 				</div>
 				<!-- Card content -->
@@ -252,7 +258,7 @@
 				   <!-- Description -->
 					<p class="card-text">Rainbow, patriot, fantasy.</p>
 					<div class="container justify-content-center text-center">		
-					  <a class="btn btn-md ml-0 border_button hover_green" href="gallery.html" role="button">Show more</a>
+					  <a class="btn btn-md ml-0 border_button hover_green" href="gallery5.html" role="button">Show more</a>
 					</div>
 				  </div>
 				  <!-- Card content -->
@@ -318,7 +324,7 @@
 				   <!-- Description -->
 					<p class="card-text">Blended, double, fiesta.</p>
 					<div class="container justify-content-center text-center">		
-					  <a class="btn btn-md ml-0 border_button hover_bi" href="gallery8.html" role="button">Show more</a>
+					  <a class="btn btn-md ml-0 border_button hover_bi" href="gallery7.html" role="button">Show more</a>
 					</div>
 				  </div>
 				  <!-- Card content -->
@@ -351,7 +357,7 @@
 				   <!-- Description -->
 					<p class="card-text">Rainbow, patriot, fantasy.</p>
 					<div class="container justify-content-center text-center">		
-					  <a class="btn btn-md ml-0 border_button hover_tinted" href="gallery.html" role="button">Show more</a>
+					  <a class="btn btn-md ml-0 border_button hover_tinted" href="gallery8.html" role="button">Show more</a>
 					</div>
 				  </div>
 				  <!-- Card content -->
