--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 						<a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-twitter"></i></a>
 						<a href="#"><i class="fa fa-instagram"></i></a>
-						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-						
+						<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+								class="fa fa-linkedin-square"></i></a>
+
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-6 order-1  order-md-2 text-center">
 					<a href="./index.html" class="site-logo">
-						<img src="img/logo2.png" alt="">
+						<img src="img/logo2.png" alt="logo">
 					</a>
 				</div>
 				<div class="col-sm-4 col-md-3 order-3 order-sm-3">
@@ -65,10 +66,14 @@
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./gallery.html">Gallery</a>
 						<ul class="sub__menu">
-							<li><a href="./gallery1.html">Red Roses</a></li>
-							<li><a href="./gallery2.html">Yellow Roses</a></li>
-							<li><a href="./gallery3.html">Other Colors</a></li>
-							<li><a href="./gallery4.html">Tinted</a></li>
+							<li><a href="./gallery1.html">Red & Coral</a></li>
+							<li><a href="./gallery2.html">White Roses</a></li>
+							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
+							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery5.html">Green</a></li>
+							<li><a href="./gallery6.html">Lavender</a></li>
+							<li><a href="./gallery7.html">Bicolor</a></li>
+							<li><a href="./gallery8.html">Tinted</a></li>
 						</ul>
 					</li>
 					<li><a href="./blog-single.html">Sustainability</a></li>
@@ -80,86 +85,54 @@
 	<!-- Header Section end -->
 
 	<!-- GALLERY SLIDER -->
-	<section class="hero__section">
-		<div class="hero-slider text-center">
-			<div class="slide-item ">
-				<a class="fresco" href="img/hero-slider/1.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/1.jpg" alt="First slide">
+	<!-- <section class=" hero__section blog__single__page"> -->
+		<div>
+			<div class="blog__slider">
+				<div class="blog__slider__item">
+					<img src="img/hero-slider/1.jpg" alt="slider image">
 					<div class="blog__content text-white mb-5">
 						<h3> Welcome to Bella Flowers!</h3>
 					</div>
-				</a>
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/2.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/2.jpg" alt="">
+				</div>
+				<div class="blog__slider__item">
+					<img src="img/hero-slider/2.jpg" alt="slider image">
 					<div class="blog__content text-white mb-5">
 						<h3>The best varieties <br> Proflora 2019 - Awarded 1st, 2nd & 3rd</h3>
 					</div>
-				</a>
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/3.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/3.jpg" alt="">
+				</div>
+				<div class="blog__slider__item">
+					<img src="img/hero-slider/3.jpg" alt="slider image">
 					<div class="blog__content text-white mb-5">
 						<h3> Commitment to quality and environment</h3>
 					</div>
-				</a>
-			</div>
-			<div class="slide-item">
-				<a class="fresco" href="img/hero-slider/4.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/4.jpg" alt="">
+				</div>
+				<div class="blog__slider__item">
+					<img src="img/Farm 1.jpg" alt="slider image">
+					<div class="blog__content text-white mb-5">
+						<h3> Commitment to quality and environment</h3>
+					</div>
+				</div>
+
+				<div class="blog__slider__item">
+					<img src="img/hero-slider/4.jpg" alt="slider image">
 					<div class="blog__content text-white mb-5">
 						<h3> Certified farms</h3>
 					</div>
-				</a>
+				</div>
 			</div>
-			<!-- <div class="slide-item">
-				<a class="fresco" href="img/hero-slider/5.jpg" data-fresco-group="projects">
-					<img src="img/hero-slider/5.jpg" alt="">
-				</a>
-			</div> -->
 
 
 		</div>
-		<div class="hero-text-slider">
-			<!-- <div class="text-item">
-				<h2>Nature</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Red Heartbeat</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Blue Dreem</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Our farms</h2>
-				<p>Tocancipá, Colombia</p>
-			</div>
-			<div class="text-item">
-				<h2>Red Darkness</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Beauty with Brain</h2>
-				<p>Photography</p>
-			</div>
-			<div class="text-item">
-				<h2>Remarkable</h2>
-				<p>Photography</p>
-			</div> -->
-		</div>
-	</section>
+	<!-- </section> -->
+
+
 	<!-- Hero Section end -->
 
-	
-			<div class="container justify-content-center text-center">		
-				<a class="btn btn-md ml-0 text-white" href="gallery.html" role="button"
-					style="background-color: #ff0089;">Go to Gallery</a>
-		</div>
+
+	<div class="container justify-content-center text-center">
+		<a class="btn btn-md ml-0 text-white" href="gallery.html" role="button" style="background-color: #ff0089;">Go to
+			Gallery</a>
+	</div>
 
 	<div class="container my-3 py-5 z-depth-1">
 
@@ -179,7 +152,7 @@
 						years’ experience in growing and exporting high quality roses directly from our farms located
 						near Bogotá, Colombia to North America, Europe, Asia and Australia. <br>
 
-						Our farms have been certified Rainforest Alliance since 2009 and Sedex (SMETA) audit, which
+						Our farms are certified Rainforest Alliance since 2009 and Sedex (SMETA) audit, which
 						supports our commitment to the environment and the well-being of our employees.</p>
 
 					<a class="btn btn-md ml-0 text-white" href="about.html" role="button"
@@ -193,7 +166,7 @@
 
 					<!--Image-->
 					<div class="view overlay z-depth-1-half">
-						<img src="img/about1.jpg" class="img-fluid" alt="image about us">
+						<img src="img/home3.jpg" class="img-fluid" alt="image about us">
 						<a href="#">
 							<div class="mask rgba-white-light"></div>
 						</a>
@@ -241,7 +214,8 @@
 						</a>
 
 						<a class="ins-ic">
-							<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+							<a href="https://www.linkedin.com/company/bella-flowers-co/" target="_blank"><i
+									class="fa fa-linkedin-square"></i></a>
 						</a>
 
 					</div>
@@ -305,7 +279,8 @@
 
 					<h6 class="text-uppercase font-weight-bold">Contact</h6>
 					<hr class="deep-purple accent-2 mb- mt-0 d-inline-block mx-auto" style="width: 60px;">
-					<p><i class="fa fa-location-arrow"></i> 1665 NW 102 Av. Suite 108.<br> &nbsp;  &nbsp;Doral-Fl 33172</p>
+					<p><i class="fa fa-location-arrow"></i> 1665 NW 102 Av. Suite 108.<br> &nbsp; &nbsp;Doral-Fl 33172
+					</p>
 					<p><i class="fa fa-inbox"></i> jgomez@bellaflowers.co </p>
 					<p><i class="fa fa-phone-square"></i> + 305-900-3793 </p>
 					<p><i class="fa fa-phone-square"></i> + 57 305-900-3793</p>
@@ -327,9 +302,9 @@
 							document.write(new Date().getFullYear());
 						</script> All rights reserved</p>
 
-						<!-- <a>  | This template is made with <i class="fa fa-heart"
+					<!-- <a>  | This template is made with <i class="fa fa-heart"
 							aria-hidden="true"></i> by <a href="https://colorlib.co" target="_blank">Colorlb</a> -->
-						
+
 				</div>
 				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			</div>
