--- a/blog-single.html
+++ b/blog-single.html
@@ -45,6 +45,11 @@
 					</a>
 				</div>
 
+				<div class="col-sm-4 col-md-3 order-3 order-sm-3">
+					<div class="header__switches">
+						<a href="#" class="nav-switch"><i class="fa fa-bars"></i></a>
+					</div>
+				</div>
 				
 			</div>
 			<nav class="main__menu">
@@ -90,7 +95,7 @@
 		<article class="blog__article">
 			<div class="blog__container">
 				<div class="blog__header">
-					<div class="blog__cata">Eco friendly</div>
+					<div class="blog__cata">Rainforest & SEDEX - SMETA Certified</div>
 					<h2 class="blog__single__title">Eco & Social commitment</h2>
 				</div>
 				<blockquote>
@@ -98,7 +103,7 @@
 					<h4>Our Founder</h4>
 					<h5>FOUNDER</h5>
 				</blockquote>
-
+			</article>
 				<p>Bella Flowers -  as an employer is aware of the important social role a fundamental part of the flower industry, which is why our motivation and commitment to our employees is to provide and ensure fair treatment and good working conditions, training programs continue under strict social responsibility and environmental care.</p>
 				<h4>Sustainability policies</h4>
 				<p>
