--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,12 @@
 						<img src="img/logo2.png" alt="Logo Bella Flowers">
 					</a>
 				</div>
+
+				<div class="col-sm-4 col-md-3 order-3 order-sm-3">
+					<div class="header__switches">
+						<a href="#" class="nav-switch"><i class="fa fa-bars"></i></a>
+					</div>
+				</div>
 			</div>
 			<nav class="main__menu">
 				<ul class="nav__menu">
@@ -97,8 +103,8 @@
 				</div>
 				<div class="col-md-6">
 					<div class="contact__text">
-
-						<p>Address: 1665 NW 102 Av. Suite 108 Doral, FL 33172</p> <br>
+						<p>Phone: + 305-900-3793</p>
+						<p>1665 NW 102 Av. Suite 108 Doral, FL 33172</p> <br>
 						<p><b> Liliana Rodriguez </b> </p>
 						<p>Whatsapp: +57 320 376 4759</p>
 						<p>Email: lrodriguez@bellaflowers.co </p> <br>
