--- a/gallery4.html
+++ b/gallery4.html
@@ -66,7 +66,7 @@
 							<li><a href="./gallery1.html">Red & Coral</a></li>
 							<li><a href="./gallery2.html">White Roses</a></li>
 							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
-							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery4.html">Yellow & Orange</a></li>
 							<li><a href="./gallery5.html">Green</a></li>
 							<li><a href="./gallery6.html">Lavender</a></li>
 							<li><a href="./gallery7.html">Bicolor</a></li>
@@ -85,7 +85,7 @@
 
 
 		<!-- Section heading -->
-		<h3 class="font-weight-bold mt-5 pb-2 text-center">Orange-Yellow & Peach</h3>
+		<h3 class="font-weight-bold mt-5 pb-2 text-center"> Yellow & Orange</h3>
 
 		<!-- classic gallery -->
 		<div class="gallery__page">
@@ -172,55 +172,6 @@
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/new_face.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/yellow/new_face.png" alt="orange_crush">
-							<div class="blog__content text-white mb-5">
-								<h3> • New Face</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/bromo.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/yellow/bromo.png" alt="bromo">
-							<div class="blog__content text-white mb-5">
-								<h3> • Bromo</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/carpe_diem.jpg"
-							data-fresco-group="gallery">
-							<img src="img/gallery/yellow/carpe_diem.jpg" alt="carpe diem">
-							<div class="blog__content text-white mb-5">
-								<h3> • Carpe Diem</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/tiffany.jpg"
-							data-fresco-group="gallery">
-							<img src="img/gallery/yellow/tiffany.jpg" alt="Tiffany">
-							<div class="blog__content text-white mb-5">
-								<h3> • Tiffany</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/shimmer.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/yellow/shimmer.png" alt="shimmer">
-							<div class="blog__content text-white mb-5">
-								<h3> • Shimmer</h3>
-							</div>
-						</a>
-					</div>
 
 				</div>
 			</div>
