--- a/gallery5.html
+++ b/gallery5.html
@@ -72,7 +72,7 @@
 							<li><a href="./gallery1.html">Red & Coral</a></li>
 							<li><a href="./gallery2.html">White Roses</a></li>
 							<li><a href="./gallery3.html">Pink & Hot Pink</a></li>
-							<li><a href="./gallery4.html">Orange-Yellow & Peach</a></li>
+							<li><a href="./gallery4.html">Yellow & Orange</a></li>
 							<li><a href="./gallery5.html">Green</a></li>
 							<li><a href="./gallery6.html">Lavender</a></li>
 							<li><a href="./gallery7.html">Bicolor</a></li>
