--- a/index.html
+++ b/index.html
@@ -124,8 +124,18 @@
 
 		</div>
 	<!-- </section> -->
-
-
+	
+	<article class="blog__article">
+		<div class="blog__container">
+			<div class="blog__header">
+				<div class="blog__cata">Rainforest & SEDEX - SMETA Certified</div>
+			</div>
+			<blockquote>
+				<P>Bella Flowers, the wonderful company where people and flowers bloom.</P>
+				<h4>José Luis Suárez</h4>
+				<h5>FOUNDER</h5>
+			</blockquote>
+		</article>
 	<!-- Hero Section end -->
 
 
