--- a/gallery1.html
+++ b/gallery1.html
@@ -109,11 +109,62 @@
 						</div>
 					</a>
 				</div>
+
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/new_face.png"
+						data-fresco-group="gallery">
+						<img src="img/gallery/yellow/new_face.png" alt="orange_crush">
+						<div class="blog__content text-white mb-5">
+							<h3> • New Face</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-3 col-md-4 col-sm-6">
+					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/bromo.png"
+						data-fresco-group="gallery">
+						<img src="img/gallery/yellow/bromo.png" alt="bromo">
+						<div class="blog__content text-white mb-5">
+							<h3> • Bromo</h3>
+						</div>
+					</a>
+				</div>
+
 				<div class="col-lg-6 col-md-4 col-sm-6">
 					<a class="gallery__item fresco img-hover-zoom" href="img/gallery/red/coral.png" data-fresco-group="gallery">
 						<img src="img/gallery/red/coral.png" alt="coral reef">
 						<div class="blog__content text-white mb-5">
 							<h3> • Coral Reef </h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-6 col-md-4 col-sm-6">
+					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/carpe_diem.jpg"
+						data-fresco-group="gallery">
+						<img src="img/gallery/yellow/carpe_diem.jpg" alt="carpe diem">
+						<div class="blog__content text-white mb-5">
+							<h3> • Carpe Diem</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-6 col-md-4 col-sm-6">
+					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/tiffany.jpg"
+						data-fresco-group="gallery">
+						<img src="img/gallery/yellow/tiffany.jpg" alt="Tiffany">
+						<div class="blog__content text-white mb-5">
+							<h3> • Tiffany</h3>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-6 col-md-4 col-sm-6">
+					<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/yellow/shimmer.png"
+						data-fresco-group="gallery">
+						<img src="img/gallery/yellow/shimmer.png" alt="shimmer">
+						<div class="blog__content text-white mb-5">
+							<h3> • Shimmer</h3>
 						</div>
 					</a>
 				</div>
