--- a/gallery3.html
+++ b/gallery3.html
@@ -209,6 +209,57 @@
 						</a>
 					</div>
 
+					<div class="col-lg-3 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/pink/hot_paris.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/pink/hot_paris.png" alt="Hot Paris">
+							<div class="blog__content text-white mb-5">
+								<h3>• Hot Paris</h3>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-3 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/pink/pink_floyd.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/pink/pink_floyd.png" alt="Pink Floyd">
+							<div class="blog__content text-white mb-5">
+								<h3>• Pink Floyd</h3>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-3 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/pink/stiletto.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/pink/stiletto.png" alt="Stiletto">
+							<div class="blog__content text-white mb-5">
+								<h3>• Stiletto</h3>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-3 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/pink/queen_berry.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/pink/queen_berry.png" alt="Queen Berry">
+							<div class="blog__content text-white mb-5">
+								<h3>• Queen Berry</h3>
+							</div>
+						</a>
+					</div>
+
+					<!-- <div class="col-lg-3 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/pink/tabata.png"
+							data-fresco-group="gallery">
+							<img src="img/gallery/pink/tabata.png" alt="Tabata">
+							<div class="blog__content text-white mb-5">
+								<h3>• Tabata</h3>
+							</div>
+						</a>
+					</div> -->
+
+
 				</div>
 			</div>
 		</div>
