--- a/gallery6.html
+++ b/gallery6.html
@@ -91,84 +91,35 @@
 			<div class="gallery__warp">
 				<div class="row">
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/cool.jpg"
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/cool.png"
 							data-fresco-group="gallery">
-							<img src="img/gallery/lavender/cool.jpg" alt="Cool">
+							<img src="img/gallery/lavender/cool.png" alt="Cool">
 							<div class="blog__content text-white mb-5">
 								<h3> • Cool</h3>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/deep_purple.jpg"
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/deep_purple.png"
 							data-fresco-group="gallery">
-							<img src="img/gallery/lavender/deep_purple.jpg" alt="deep-purple">
+							<img src="img/gallery/lavender/deep_purple.png" alt="deep-purple">
 							<div class="blog__content text-white mb-5">
 								<h3> • Deep Purple</h3>
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/vendela.png"
+					<div class="col-lg-4 col-md-4 col-sm-6">
+						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/lavender/moody_blues.png"
 							data-fresco-group="gallery">
-							<img src="img/gallery/white/vendela.png" alt="Vendela white">
+							<img src="img/gallery/lavender/moody_blues.png" alt="Moody Blues">
 							<div class="blog__content text-white mb-5">
-								<h3> • Vendela</h3>
+								<h3> • Moody Blues</h3>
 							</div>
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/playa_blanca.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/white/playa_blanca.png" alt="playa Blanca">
-							<div class="blog__content text-white mb-5">
-								<h3> • Playa Blanca</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/sugar_doll.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/white/sugar_doll.png" alt="Sugar Doll">
-							<div class="blog__content text-white mb-5">
-								<h3> • Sugar Doll</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/snow_bliss.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/white/snow_bliss.png" alt="Snow bliss">
-							<div class="blog__content text-white mb-5">
-								<h3> • Snow bliss</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/cotopaxi.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/white/cotopaxi.png" alt="Cotopaxi">
-							<div class="blog__content text-white mb-5">
-								<h3> • Cotopaxi</h3>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-4 col-sm-6">
-						<a class="gallery__item fresco  img-hover-zoom" href="img/gallery/white/white_chocolate.png"
-							data-fresco-group="gallery">
-							<img src="img/gallery/white/white_chocolate.png" alt="white Chocolate">
-							<div class="blog__content text-white mb-5">
-								<h3> • White Chocolate</h3>
-							</div>
-						</a>
-					</div>
-
+					
 				</div>
 			</div>
 		</div>
