--- a/blog-single.html
+++ b/blog-single.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Sustainability -Blog</title>
 	<meta charset="UTF-8">
@@ -7,13 +8,13 @@
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/slicknav.min.css"/>
-	<link rel="stylesheet" href="css/slick.css"/>
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/slicknav.min.css" />
+	<link rel="stylesheet" href="css/slick.css" />
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/style.css" />
 
 
 	<!--[if lt IE 9]>
@@ -22,6 +23,7 @@
 	<![endif]-->
 
 </head>
+
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -50,7 +52,7 @@
 						<a href="#" class="nav-switch"><i class="fa fa-bars"></i></a>
 					</div>
 				</div>
-				
+
 			</div>
 			<nav class="main__menu">
 				<ul class="nav__menu">
@@ -80,16 +82,16 @@
 	<div class="blog__single__page">
 		<div class="blog__slider">
 			<div class="blog__slider__item">
-				<img src="img/blog-single/1.jpg" alt="">
+				<img src="img/blog-single/1.jpg" alt="image1">
 			</div>
 			<div class="blog__slider__item">
-				<img src="img/blog-single/2.jpg" alt="">
+				<img src="img/blog-single/2.jpg" alt="image2">
 			</div>
 			<div class="blog__slider__item">
-				<img src="img/blog-single/3.jpg" alt="">
+				<img src="img/blog-single/3.jpg" alt="image3">
 			</div>
 			<div class="blog__slider__item">
-				<img src="img/blog-single/5.jpg" alt="">
+				<img src="img/blog-single/5.jpg" alt="image4">
 			</div>
 		</div>
 		<article class="blog__article">
@@ -103,20 +105,47 @@
 					<h4>Our Founder</h4>
 					<h5>FOUNDER</h5>
 				</blockquote>
-			</article>
-				<p>Bella Flowers -  as an employer is aware of the important social role a fundamental part of the flower industry, which is why our motivation and commitment to our employees is to provide and ensure fair treatment and good working conditions, training programs continue under strict social responsibility and environmental care.</p>
-				<h4>Sustainability policies</h4>
-				<p>
-				We have social, environmental and occupational health policies and programs giving each of these issues all the necessary importance.
-				 Our social responsibility policy provides support to our employees’ medical and dental services, counseling in family welfare and health all these services extended to their family groups for the sole purpose of improving their living conditions, our company also offers employees transportation and room service ensures a safe working conditions. 
-								
-				 We have an environmental policy that maintains the integrity of the ecosystems by preventing alteration or destruction through the implementation of support programs and continuous commitment work.
-				</p>
+		</article>
+		<div class="container">
+			<p>Bella Flowers - as an employer is aware of the important social role a fundamental part of the flower
+				industry, which is why our motivation and commitment to our employees is to provide and ensure fair
+				treatment and good working conditions, training programs continue under strict social responsibility and
+				environmental care.</p>
+	<!-- Background video -->
+	<div class="video-background-holder">
+		<div class="video-background-overlay"></div>
+		<video id="bckVideo"  playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+			<source src="video/video1.mp4" type="video/mp4">
+		</video>
+		<div class="video-background-content container h-100">
+			<div class="d-flex h-100 text-center align-items-center">
+				<div class="w-100 text-white">
+					<h1 class="display-4">Sustainability</h1>
+					<p class="lead mb-0">Eco & Social commitment</p>
+				</div>
 			</div>
+		</div>
+	</div>
+	<!-- End -->
 
-			<div class="blog__banner pt-4 pb-5">
-				<img src="img/blog-single/banner.jpg" alt="">
-			</div>
+	<div class="container my-5">
+		<h4>Sustainability policies</h4>
+		<p>
+			We have social, environmental and occupational health policies and programs giving each of these issues
+			all
+			the necessary importance.
+			Our social responsibility policy provides support to our employees’ medical and dental services,
+			counseling
+			in family welfare and health all these services extended to their family groups for the sole purpose of
+			improving their living conditions, our company also offers employees transportation and room service
+			ensures
+			a safe working conditions.
+			We have an environmental policy that maintains the integrity of the ecosystems by preventing alteration
+			or
+			destruction through the implementation of support programs and continuous commitment work.
+		</p>
+	</div>
+
 
 	<!-- Footer -->
 	<footer class="page-footer font-small unique-color-dark">
@@ -236,12 +265,13 @@
 			</div>
 		</div>
 	</footer>
-	
+
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
 	<script src="js/jquery.slicknav.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
